--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -3,7 +3,7 @@ body {
 }
 
 .cabecalho {
-    background-color: #4495FF;
+    /* background-color: #4495FF; */
     /* height: 60px; */
     display: flex;
 
@@ -41,7 +41,6 @@ body {
 }
 
 .container {
-    background-color: rgb(235, 174, 42);
     max-width: 1440px;
     margin: 0 auto;
 
@@ -58,16 +57,63 @@ body {
 }
 
 .container .mario {
-    max-width: 400px;
+    max-width: 500px;
 }
 
 .container .descricao {
     color: #a8adb7;
     width: 85%;
     font-size: 18px;
+    margin: 30px 0;
 }
 
+.container .botao-trailer {
+    background-color: #d5001d;
+    color: #ffffff;
+    padding: 15px;
+    font-size: 16px;
+    font-weight: 700;
+    cursor: pointer;
 
+    border: none;
+    border-radius: 50px;
+
+    text-transform: uppercase;
+    transition: 0.5s all ease-in-out;
+}
+
+.container .botao-trailer:hover {
+    transform: scale(1.1);
+}
+
+.fundo-video {
+    background-color: #000000;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: -1;
+    overflow: hidden;
+    width: 100vw;  
+    height: 100vh;
+}
+
+.fundo-video .video {
+    height: 100vh;
+    width: 100vw;
+}
+
+.fundo-video::after {
+    content: "";
+    
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.60) 50%, rgba(0,0,0,1) 100%);
+}
 
 footer {
     display: flex;
@@ -76,14 +122,13 @@ footer {
     height: 60px;
     width: 100vw;
 
-    background-color: #4495FF;
+    /* background-color: #4495FF; */
     font-size: 14px;
     color: #ffffff;
 
     display: flex;
     align-items: center;
     justify-content: center;
-
 }
 
 #nome {
