--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -111,11 +111,32 @@ body {
 }
 
 .modal {
-    background-color: #d5001d;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+
     position: fixed;
+    width: 100vw;
+    height: 100vh;
+
+    top: 0;
+    left: 0;
+
+    background-color: rgba(55, 53, 53, 0.8);
 }
 
-
+.fechar-modal {
+    background-color: #a8adb7;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 24px;
+    width: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
 
 
 
@@ -143,7 +164,3 @@ footer {
 #nome {
     color: #DF2D37;
 }
-
-
-
-
