--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -66,7 +66,8 @@ body {
     background-color: #d5001d;
     color: #ffffff;
     padding: 15px;
-    font-size: 16px;
+    font-size: 15
+px;
     font-weight: 700;
     cursor: pointer;
 
@@ -94,7 +95,7 @@ body {
 
 .fundo-video .video {
     height: 100vh;
-    /* width: 100vw; */
+    
 }
 
 .fundo-video::after {
@@ -106,8 +107,8 @@ body {
     top: 0;
     left: 0;
     
-    background: linear-gradient(
-    90deg,
+    background:
+    linear-gradient(90deg,
     rgba(0,0,0,1) 0%, 
     rgba(0,0,0,0.80) 50%, 
     rgba(0,0,0,1) 100%);
@@ -118,15 +119,16 @@ body {
     align-items: center;
     justify-content: center;
     
-
     position: fixed;
     width: 100vw;
     height: 100vh;
-
     top: 0;
     left: 0;
 
     background-color: rgba(55, 53, 53, 0.8);
+
+    opacity: 0;
+    visibility: hidden;
 }
 
 .conteudo-modal {
@@ -153,7 +155,7 @@ body {
     height: 480px;
 } */
 
-/* pode se colocar mais de uma classe em um elemento como no 
+/* podemos chamar mais de uma classe em um elemento, como no 
 exemplo abaixo onde se aborda as duas classes sem espaço */
 .modal.aberto {
     opacity: 1;
