--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -66,8 +66,7 @@ body {
     background-color: #d5001d;
     color: #ffffff;
     padding: 12px;
-    font-size: 15
-px;
+    font-size: 15px;
     font-weight: 700;
     cursor: pointer;
 
