--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -1,9 +1,10 @@
 @media (max-width: 1024px) {
     body {  
-        background-image: url(../imagens/bkg-mobile-portrait-sky.png);
+        background-image: url(../imagens/bkg-mobile-portrait-pipe.png);
         height: 100vh;
         background-size: cover;
         background-repeat: no-repeat;
+        background-position: center;
     }
 
     .cabecalho nav li a:hover {
@@ -28,7 +29,7 @@
     }
 
     .container .imagem-mario {
-        max-width: 70%;
+        max-width: 50%;
     }
 
     .container .informacoes {
@@ -57,9 +58,9 @@
     }
 
     footer {
-        background-image: url(../imagens/ground-mobile.png);
+        /* background-image: url(../imagens/ground-mobile.png);
         background-size: cover;
-        width: 100vw;
+        width: 100vw; */
     }
 
     #nome {
