--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -41,7 +41,7 @@
     }
 
     .container .informacoes p {
-        color: #97a098;
+        color: #ffffff;
     }
 
     .container .botao-trailer {
