Add imagens de mockup

--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -17,8 +17,8 @@
 
     .container {
         flex-wrap: wrap;
-        display: flex;
-        align-items: center;
+        /* display: flex;
+        align-items: center; */
         justify-content: center;
         gap: 20px;
         height: auto;
